--- a/energy-visualization-platform/src/components/webSocketConnection/Popup.css
+++ b/energy-visualization-platform/src/components/webSocketConnection/Popup.css
@@ -14,9 +14,12 @@
     padding: 32px;
     width: 100%;
     max-width: 640px;
-    border-width: 100px;
-    border-color: #0F2F64;
-    background-color: white;
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.popup-inner h3 {
+    color: red;
 }
 
 .popup-inner .close-btn{
@@ -32,3 +35,4 @@
 .popup-inner .close-btn:hover {
     background-color: #3353B2;
 }
+
